fix: element link selector dialog z-index & positioning (#8853)

--- a/packages/excalidraw/components/ElementLinkDialog.scss
+++ b/packages/excalidraw/components/ElementLinkDialog.scss
@@ -4,9 +4,9 @@
   .ElementLinkDialog {
     position: absolute;
     top: var(--editor-container-padding);
-    left: calc(var(--editor-container-padding) * 4);
+    left: var(--editor-container-padding);
 
-    z-index: 3;
+    z-index: var(--zIndex-modal);
 
     border-radius: 10px;
     padding: 1.5rem;
